Bug 252488 - Digikam incorrectly renders SD Card size.
Summary: Digikam incorrectly renders SD Card size.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Import-UMS (other bugs)
Version First Reported In: 1.4.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-27 00:43 UTC by Oleg Atamanenko
Modified: 2017-08-16 05:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments
Digikam incorrectly displays SD Card size. (10.65 KB, image/png)
2010-09-27 00:43 UTC, Oleg Atamanenko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg Atamanenko 2010-09-27 00:43:35 UTC
Created attachment 52012 [details]
Digikam incorrectly displays SD Card size.

Version:           1.4.0 (using KDE 4.5.1) 
OS:                Linux

Digikam incorrectly renders SD Card size.

I suggest to display SD Card size in human readable format.

I attached 16GiB SD Card and tried to download photos.

See attached screenshot.

Reproducible: Always

Steps to Reproduce:
1. Attach SD Card.
2. Start Digikam.
3. Open menu Import

Actual Results:  
Displays USB Disk multicatd (1e+01 GB)

Expected Results:  
Displays USB Disk multicatd (16 GB)

OS: Linux (i686) release 2.6.35-ARCH
Compiler: gcc
Comment 1 Marcel Wiesweg 2010-09-27 09:48:05 UTC
SVN commit 1180151 by mwiesweg:

- use KLocale to format storage size (*)
- use volume label, then volume device product or vendor, only then
  drive device product - the latter is usually unspecific
- use i18n where applicable

(*) I am tempted to use MetricBinaryDialect because on USB disks the size
is usually written in this format ("4GB" instead of "3.7GB"). On the other hand,
there is a global KDE setting for this, which is IEC ("3.7GiB") per default. Opinions?

BUG: 252488
BUG: 252489

 M  +4 -1      NEWS  
 M  +26 -28    digikam/digikamapp.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180151
Comment 2 Oleg Atamanenko 2010-09-27 10:46:19 UTC
If KDE provides global settings to configure  how to display disk sizes, then digikam should use this setting.