- use KLocale to format storage size (*) - use volume label, then volume device product or vendor, only then   drive device product - the latter is usually unspecific - use i18n where applicable

(*) I am tempted to use MetricBinaryDialect because on USB disks the size
is usually written in this format ("4GB" instead of "3.7GB"). On the other hand,
there is a global KDE setting for this, which is IEC ("3.7GiB") per default. Opinions?

BUG: 252488
BUG: 252489

svn path=/trunk/extragear/graphics/digikam/; revision=1180151